Updated footer and fixed masthead on mobile.

--- a/css/main.css
+++ b/css/main.css
@@ -203,6 +203,13 @@ header.masthead .intro-text .intro-heading {
   margin-bottom: 25px;
 }
 
+@media (max-width: 768px) {
+  #bean-burst-logo {
+    width: auto;
+    height: 200px;
+  }
+}
+
 @media (min-width: 768px) {
   header.masthead .intro-text {
     padding-top: 200px;
@@ -371,10 +378,16 @@ section#contact .section-heading {
   color: #333;
 }
 
+#pre-footer {
+  background-color: #f44;
+  text-align: center;
+  padding: 0;
+}
+
 footer {
   padding: 15px;
   text-align: center;
-  background-color: #f44;
+  background-color: #b73636;
   color: #fff;
   text-transform: uppercase;
   font-family: 'Roboto', sans-serif;
